--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -111,7 +111,7 @@ jobs:
           export_default_credentials: true
       - name: Create GKE cluster
         run: |
-          gcloud container clusters create gtfs-validator-gke \
+          gcloud container clusters create gtfs-validator-snapshot-cluster \
               --num-nodes 3 \
               --zone us-east1
 #  set-up-kubernetes-for-latest-release:
