--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -124,14 +124,14 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
-      - name: Create GKE cluster
-        run: |
-          gcloud container clusters create gtfs-validator-snapshot-cluster \
-              --num-nodes 1 \
-              --zone us-east1
+#      - name: Create GKE cluster
+#        run: |
+#          gcloud container clusters create gtfs-validator-snapshot-cluster \
+#              --num-nodes 1 \
+#              --zone us-east1
       - name: Deploy snapshot app to GKE
         run: |
-          IMAGE_NAME = us-east1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/gtfs-validatort-repo/gtfs-validator-gke:${{ steps.prep.outputs.versionTag }}
+          IMAGE_NAME=us-east1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/gtfs-validatort-repo/gtfs-validator-gke:${{ steps.prep.outputs.versionTag }}
           deployment=`cat "deployment.yaml" | sed "s/{{IMAGE_NAME}}/$IMAGE_NAME/g"`
           gcloud kubectl apply -f deployment
 #  retrieve-urls:
