--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -126,14 +126,12 @@ jobs:
           export_default_credentials: true
 #      - name: Create GKE cluster
 #        run: |
-#          gcloud container clusters create gtfs-validator-snapshot-cluster \
-#              --num-nodes 1 \
-#              --zone us-east1
+#          gcloud container clusters create-auto gtfs-validator-snapshot-cluster --zone us-east1
       - name: Deploy snapshot app to GKE
         run: |
-          IMAGE_NAME=us-east1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/gtfs-validatort-repo/gtfs-validator-gke:${{ steps.prep.outputs.versionTag }}
-          deployment=`cat "deployment.yaml" | sed "s/{{IMAGE_NAME}}/$IMAGE_NAME/g"`
-          gcloud kubectl apply -f deployment
+          export IMAGE_NAME=us-east1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/gtfs-validatort-repo/gtfs-validator-gke:${{ steps.prep.outputs.versionTag }}
+          sed -i -e "s/{{IMAGE_NAME}}/$IMAGE_NAME/" deployment.yaml
+          gcloud kubectl apply -f deployment.yaml
 #  retrieve-urls:
 #  execute-snapshot-version:
 #  execute-latest-release:
