--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: gtfs-validator-container
-          image: {{IMAGE_NAME}}
+          image: us-east1-docker.pkg.dev/{{GCP_PROJECT_ID}}/gtfs-valdiator-repo/gtfs-validator-gke:{{TAG}}}
           # This app listens on port 8080 for web traffic by default.
           ports:
             - containerPort: 8080
