--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -133,13 +133,15 @@ jobs:
           sed -i -e "s/{{PROJECT_ID}}/${{ secrets.GCP_PROJECT_ID }}/" deployment.yaml
           sed -i -e "s/{{TAG}}/${{ steps.prep.outputs.versionTag }}/" deployment.yaml
 #          kubectl apply -f deployment.yaml
-      - id: get-credentials
+      - name: Authenticate to GKE
+        id: get-credentials
         uses: google-github-actions/get-gke-credentials@main
         with:
           cluster_name: gtfs-validator-snapshot-cluster
           location: us-east1
           credentials: ${{ secrets.GCP_SA_KEY }}
-      - id: deploy-to-gke
+      - name: Deploy to GKE
+        id: deploy-to-gke
         run: kubectl apply -f deployment.yaml
 #      - name: kubectl - Google Cloud GKE cluster.
 #        uses: ameydev/gke-kubectl-action@master
