--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -145,7 +145,40 @@ jobs:
       - name: Expose service
         id: expose-service
         run: kubectl apply -f service.yaml
-
+  set-up-kubernetes-for-latest-release:
+    needs: [ push-latest-release-to-gar ]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Get Latest Tag
+        id: previoustag
+        uses: WyriHaximus/github-action-get-previous-tag@v1
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+      - name: Create GKE cluster
+        run: |
+          gcloud container clusters create-auto gtfs-validator-${{ steps.previoustag.outputs.tag }}-cluster --zone us-east1
+      - name: Substitute values in deployment.yaml
+        run: |
+          sed -i -e "s/{{PROJECT_ID}}/${{ secrets.GCP_PROJECT_ID }}/" deployment.yaml
+          sed -i -e "s/{{TAG}}/${{ steps.previoustag.outputs.tag }}/" deployment.yaml
+      - name: Authenticate to GKE
+        id: get-credentials
+        uses: google-github-actions/get-gke-credentials@main
+        with:
+          cluster_name: gtfs-validator-snapshot-cluster
+          location: us-east1
+          credentials: ${{ secrets.GCP_SA_KEY }}
+      - name: Deploy to GKE
+        id: deploy-to-gke
+        run: kubectl apply -f deployment.yaml
+      - name: Expose service
+        id: expose-service
+        run: kubectl apply -f service.yaml
 #  retrieve-urls:
 #  execute-snapshot-version:
 #  execute-latest-release:
