--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -161,7 +161,7 @@ jobs:
           export_default_credentials: true
       - name: Create GKE cluster
         run: |
-          gcloud container clusters create-auto gtfs-validator-${{ steps.previoustag.outputs.tag }}-cluster --zone us-east1
+          gcloud container clusters create-auto gtfs-validator-latest-release-cluster --zone us-east1
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s/{{PROJECT_ID}}/${{ secrets.GCP_PROJECT_ID }}/" deployment.yaml
