--- a/service.yaml
+++ b/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gtfs-validator-service
+  name: {{SERVICE_NAME}}
 spec:
   type: LoadBalancer
   selector:
