--- a/service.yaml
+++ b/service.yaml
@@ -1,11 +1,17 @@
-apiVersion: v1
-kind: Service
+---
+apiVersion: "v1"
+kind: "Service"
 metadata:
   name: {{SERVICE_NAME}}
+  namespace: "default"
+  labels:
+    app: {{WORKLOAD_NAME}}
 spec:
-  type: LoadBalancer
-  selector:
-    app: gtfs-validator
   ports:
-    - port: 80
+    - protocol: "TCP"
+      port: 80
       targetPort: 8080
+  selector:
+    app: {{WORKLOAD_NAME}}
+  type: "LoadBalancer"
+  loadBalancerIP: ""
