--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -125,9 +125,9 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
-      - name: Create GKE cluster
-        run: |
-          gcloud container clusters create-auto gtfs-validator-snapshot-cluster --zone us-east1
+#      - name: Create GKE cluster
+#        run: |
+#          gcloud container clusters create-auto gtfs-validator-snapshot-cluster --zone us-east1
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s/{{PROJECT_ID}}/${{ secrets.GCP_PROJECT_ID }}/" deployment.yaml
@@ -137,7 +137,6 @@ jobs:
         run: |
           sed -i -e "s/{{SERVICE_NAME}}/gtfs-validator-snapshot-service/" service.yaml
           sed -i -e "s/{{WORKLOAD_NAME}}/gtfs-validator-snapshot-workload/" service.yaml
-
       - name: Authenticate to GKE
         id: get-credentials
         uses: google-github-actions/get-gke-credentials@main
@@ -165,9 +164,9 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
-      - name: Create GKE cluster
-        run: |
-          gcloud container clusters create-auto gtfs-validator-latest-release-cluster --zone us-east1
+#      - name: Create GKE cluster
+#        run: |
+#          gcloud container clusters create-auto gtfs-validator-latest-release-cluster --zone us-east1
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s/{{PROJECT_ID}}/${{ secrets.GCP_PROJECT_ID }}/" deployment.yaml
