--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -127,7 +127,7 @@ jobs:
           export_default_credentials: true
       - name: Create GKE snapshot cluster
         run: |
-          gcloud container clusters create-auto ${{ steps.prep.outputs.versionTag }} --zone us-east1
+          gcloud container clusters create-auto snapshot-cluster --zone us-east1
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s/{{PROJECT_ID}}/${{ secrets.GCP_PROJECT_ID }}/" deployment.yaml
@@ -141,7 +141,7 @@ jobs:
         id: get-credentials
         uses: google-github-actions/get-gke-credentials@main
         with:
-          cluster_name: ${{ steps.prep.outputs.versionTag }}
+          cluster_name: snapshot-cluster
           location: us-east1
           credentials: ${{ secrets.GCP_SA_KEY }}
       - name: Deploy to GKE
