--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -125,23 +125,23 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
-#      - name: Create GKE snapshot cluster
-#        run: |
-#          gcloud container clusters create-auto snapshot-cluster --zone us-east1
+      - name: Create GKE snapshot cluster
+        run: |
+          gcloud container clusters create-auto gtfs-validator-snapshot-cluster --zone us-east1
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s/{{PROJECT_ID}}/${{ secrets.GCP_PROJECT_ID }}/" deployment.yaml
           sed -i -e "s/{{TAG}}/${{ steps.prep.outputs.versionTag }}/" deployment.yaml
-          sed -i -e "s/{{DEPLOYMENT_NAME}}/gtfs-validator-${{ steps.prep.outputs.versionTag }}-workload/g" deployment.yaml
+          sed -i -e "s/{{DEPLOYMENT_NAME}}/gtfs-validator-snapshot-workload/g" deployment.yaml
       - name: Substitute values in service.yaml
         run: |
-          sed -i -e "s/{{SERVICE_NAME}}/snapshot-service/" service.yaml
-          sed -i -e "s/{{WORKLOAD_NAME}}/latest-release-workload/" service.yaml
+          sed -i -e "s/{{SERVICE_NAME}}/gtfs-validator-snapshot-service/" service.yaml
+          sed -i -e "s/{{WORKLOAD_NAME}}/gtfs-validator-snapshot-workload/" service.yaml
       - name: Authenticate to GKE
         id: get-credentials
         uses: google-github-actions/get-gke-credentials@main
         with:
-          cluster_name: snapshot-cluster
+          cluster_name: gtfs-validator-snapshot-cluster
           location: us-east1
           credentials: ${{ secrets.GCP_SA_KEY }}
       - name: Deploy to GKE
@@ -164,9 +164,9 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
-#      - name: Create GKE cluster
-#        run: |
-#          gcloud container clusters create-auto latest-release-cluster --zone us-east1
+      - name: Create GKE cluster
+        run: |
+          gcloud container clusters create-auto gtfs-validator-latest-release-cluster --zone us-east1
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s/{{PROJECT_ID}}/${{ secrets.GCP_PROJECT_ID }}/" deployment.yaml
@@ -180,7 +180,7 @@ jobs:
         id: get-credentials
         uses: google-github-actions/get-gke-credentials@main
         with:
-          cluster_name: latest-release-cluster
+          cluster_name: gtfs-validator-latest-release-cluster
           location: us-east1
           credentials: ${{ secrets.GCP_SA_KEY }}
       - name: Deploy to GKE
