--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -2,7 +2,7 @@ name: Rule acceptance tests
 
 on:
   push:
-    branches: [ master, ci/acceptance-tests ]
+    branches: [ master, task/deploy-to-k8s ]
     paths-ignore:
       - '**.md'
 jobs:
@@ -125,9 +125,9 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
-      - name: Create GKE snapshot cluster
-        run: |
-          gcloud container clusters create-auto gtfs-validator-snapshot-cluster --zone us-east1
+#      - name: Create GKE snapshot cluster
+#        run: |
+#          gcloud container clusters create-auto gtfs-validator-snapshot-cluster --zone us-east1
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s/{{PROJECT_ID}}/${{ secrets.GCP_PROJECT_ID }}/" deployment.yaml
@@ -164,9 +164,9 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
-      - name: Create GKE cluster
-        run: |
-          gcloud container clusters create-auto gtfs-validator-latest-release-cluster --zone us-east1
+#      - name: Create GKE cluster
+#        run: |
+#          gcloud container clusters create-auto gtfs-validator-latest-release-cluster --zone us-east1
       - name: Substitute values in deployment.yaml
         run: |
           sed -i -e "s/{{PROJECT_ID}}/${{ secrets.GCP_PROJECT_ID }}/" deployment.yaml
