--- a/springboot/Dockerfile
+++ b/springboot/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:11
 COPY build/libs/gtfs-validator*.jar /
 WORKDIR /
 EXPOSE 8080
-ENTRYPOINT [ "/bin/sh", "-c", "java -jar gtfs-validator*.jar"]
+ENTRYPOINT [ "/bin/sh", "-c", "java -Xms6G -jar gtfs-validator*.jar"]
