--- a/deployment.yaml
+++ b/deployment.yaml
@@ -24,6 +24,9 @@ spec:
           env:
             - name: PORT
               value: "8080"
+          resources:
+            requests:
+              memory: "32Gi"
 ---
 apiVersion: "autoscaling/v2beta1"
 kind: "HorizontalPodAutoscaler"
