--- a/.github/workflows/end_to_end_big.yml
+++ b/.github/workflows/end_to_end_big.yml
@@ -2,7 +2,13 @@ name: End to end big
 
 on:
   push:
-    branches: [ master, extend-end-to-end ] #<-- replace transport-agency-name by the name of the agency/publisher
+    branches: [ master ]
+    paths-ignore:
+      - '**.md'
+  pull_request:
+    branches: [ master ]
+    paths-ignore:
+      - '**.md'
 
 jobs:
   validate_gradle_wrapper:
