--- a/deployment.yaml
+++ b/deployment.yaml
@@ -24,6 +24,9 @@ spec:
           env:
             - name: PORT
               value: "8080"
+            - name: JVM_OPTS
+              value: "-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -Xms8G"
+  restartPolicy: Never
 ---
 apiVersion: "autoscaling/v2beta1"
 kind: "HorizontalPodAutoscaler"
