pass secrets to deployment as env vars

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -169,6 +169,16 @@ jobs:
 #          gcloud container clusters create-auto gtfs-validator-latest-release-cluster --zone us-east1
       - name: Substitute values in deployment.yaml
         run: |
+          sed -i -e "s/{{TYPE}}/${{ secrets.TYPE }}/" deployment.yaml
+          sed -i -e "s/{{PROJECT_ID}}/${{ secrets.PROJECT_ID }}/" deployment.yaml
+          sed -i -e "s/{{PRIVATE_KEY_ID}}/${{ secrets.PRIVATE_KEY_ID }}/" deployment.yaml
+          sed -i -e "s/{{PRIVATE_KEY}}/${{ secrets.PRIVATE_KEY }}/" deployment.yaml
+          sed -i -e "s/{{CLIENT_EMAIL}}/${{ secrets.CLIENT_EMAIL }}/" deployment.yaml
+          sed -i -e "s/{{CLIENT_ID}}/${{ secrets.CLIENT_ID }}/" deployment.yaml
+          sed -i -e "s/{{AUTH_URI}}/${{ secrets.AUTH_URI }}/" deployment.yaml
+          sed -i -e "s/{{TOKEN_URI}}/${{ secrets.TOKEN_URI }}/" deployment.yaml
+          sed -i -e "s/{{AUTH_PROVIDER_X509_CERT_URL}}/${{ secrets.AUTH_PROVIDER_X509_CERT_URL }}/" deployment.yaml
+          sed -i -e "s/{{CLIENT_X509_CERT_URL}}/${{ secrets.CLIENT_X509_CERT_URL }}/" deployment.yaml
           sed -i -e "s/{{PROJECT_ID}}/${{ secrets.GCP_PROJECT_ID }}/" deployment.yaml
           sed -i -e "s/{{TAG}}/${{ steps.previoustag.outputs.tag }}/" deployment.yaml
           sed -i -e "s/{{DEPLOYMENT_NAME}}/gtfs-validator-latest-release-workload/g" deployment.yaml
