--- a/deployment.yaml
+++ b/deployment.yaml
@@ -32,52 +32,52 @@ spec:
             - name: TYPE
               valueFrom:
                 secretKeyRef:
-                  name: secrets
+                  name: temp-secrets
                   key: TYPE
             - name: PROJECT_ID
               valueFrom:
                 secretKeyRef:
-                  name: secrets
+                  name: temp-secrets
                   key: PROJECT_ID
             - name: PRIVATE_KEY_ID
               valueFrom:
                 secretKeyRef:
-                  name: secrets
+                  name: temp-secrets
                   key: PRIVATE_KEY_ID
             - name: PRIVATE_KEY
               valueFrom:
                 secretKeyRef:
-                  name: secrets
+                  name: temp-secrets
                   key: PRIVATE_KEY
             - name: CLIENT_EMAIL
               valueFrom:
                 secretKeyRef:
-                  name: secrets
+                  name: temp-secrets
                   key: CLIENT_EMAIL
             - name: CLIENT_ID
               valueFrom:
                 secretKeyRef:
-                  name: secrets
+                  name: temp-secrets
                   key: CLIENT_ID
             - name: AUTH_URI
               valueFrom:
                 secretKeyRef:
-                  name: secrets
+                  name: temp-secrets
                   key: AUTH_URI
             - name: TOKEN_URI
               valueFrom:
                 secretKeyRef:
-                  name: secrets
+                  name: temp-secrets
                   key: TOKEN_URI
             - name: AUTH_PROVIDER_X509_CERT_URL
               valueFrom:
                 secretKeyRef:
-                  name: secrets
+                  name: temp-secrets
                   key: AUTH_PROVIDER_X509_CERT_URL
             - name: CLIENT_X509_CERT_URL
               valueFrom:
                 secretKeyRef:
-                  name: secrets
+                  name: temp-secrets
                   key: CLIENT_X509_CERT_URL
             - name: VALIDATION_REPORT_BUCKET
               value: "{{VALIDATION_REPORT_BUCKET}}"
