--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -22,9 +22,12 @@ jobs:
           cluster_name: gtfs-validator-latest-release-cluster
           location: us-east1
           credentials: ${{ secrets.GCP_SA_KEY }}
-      - name: Define secrets
+      - name: delete secrets
         run: |
-          kubectl create secret generic temp-secrets --from-literal=TYPE="${{ secrets.TYPE }}" --from-literal=PROJECT_ID="${{ secrets.PROJECT_ID }}" --from-literal=PRIVATE_KEY_ID="${{ secrets.PRIVATE_KEY_ID }}" --from-literal=PRIVATE_KEY="${{ secrets.PRIVATE_KEY }}" --from-literal=CLIENT_EMAIL="${{ secrets.CLIENT_EMAIL }}" --from-literal=CLIENT_ID="${{ secrets.CLIENT_ID }}" --from-literal=AUTH_URI="${{ secrets.AUTH_URI }}" --from-literal=TOKEN_URI="${{ secrets.TOKEN_URI }}" --from-literal=AUTH_PROVIDER_X509_CERT_URL="${{ secrets.AUTH_PROVIDER_X509_CERT_URL }}" --from-literal=CLIENT_X509_CERT_URL="${{ secrets.CLIENT_X509_CERT_URL }}"
+          kubectl delete secret temp-secrets
+          kubectl delete secret secrets
+          kubectl delete secret my-secrets
+#          kubectl create secret generic temp-secrets --from-literal=TYPE="${{ secrets.TYPE }}" --from-literal=PROJECT_ID="${{ secrets.PROJECT_ID }}" --from-literal=PRIVATE_KEY_ID="${{ secrets.PRIVATE_KEY_ID }}" --from-literal=PRIVATE_KEY="${{ secrets.PRIVATE_KEY }}" --from-literal=CLIENT_EMAIL="${{ secrets.CLIENT_EMAIL }}" --from-literal=CLIENT_ID="${{ secrets.CLIENT_ID }}" --from-literal=AUTH_URI="${{ secrets.AUTH_URI }}" --from-literal=TOKEN_URI="${{ secrets.TOKEN_URI }}" --from-literal=AUTH_PROVIDER_X509_CERT_URL="${{ secrets.AUTH_PROVIDER_X509_CERT_URL }}" --from-literal=CLIENT_X509_CERT_URL="${{ secrets.CLIENT_X509_CERT_URL }}"
   push-snapshot-to-gar:
     runs-on: ubuntu-latest
     steps:
@@ -164,6 +167,9 @@ jobs:
           cluster_name: gtfs-validator-snapshot-cluster
           location: us-east1
           credentials: ${{ secrets.GCP_SA_KEY }}
+      - name: create secrets
+        run: |
+          kubectl create secret generic temp-secrets --from-literal=TYPE="${{ secrets.TYPE }}" --from-literal=PROJECT_ID="${{ secrets.PROJECT_ID }}" --from-literal=PRIVATE_KEY_ID="${{ secrets.PRIVATE_KEY_ID }}" --from-literal=PRIVATE_KEY="${{ secrets.PRIVATE_KEY }}" --from-literal=CLIENT_EMAIL="${{ secrets.CLIENT_EMAIL }}" --from-literal=CLIENT_ID="${{ secrets.CLIENT_ID }}" --from-literal=AUTH_URI="${{ secrets.AUTH_URI }}" --from-literal=TOKEN_URI="${{ secrets.TOKEN_URI }}" --from-literal=AUTH_PROVIDER_X509_CERT_URL="${{ secrets.AUTH_PROVIDER_X509_CERT_URL }}" --from-literal=CLIENT_X509_CERT_URL="${{ secrets.CLIENT_X509_CERT_URL }}"
       - name: Deploy to GKE
         id: deploy-to-gke
         run: kubectl apply -f deployment.yaml
