--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -215,7 +215,7 @@ jobs:
         id: set-matrix
         run: |
           python3 scripts/mobility-database-harvester/harvest_latest_versions.py -d datasets_metadata -a gtfs_archives_ids.json -l latest_versions.json
-          DATASETS=$(jq . datasets_metadata/latest_versions.json -R
+          DATASETS=$(jq . datasets_metadata/latest_versions.json -R)
           echo $DATASETS
           echo "::set-output name=matrix::$DATASETS"
         env:
